tests/ui/substrate/implementation/fail_weight_without_dispatch.stderr
error: either "dispatch" or "expr" attributes are expected
  --> tests/ui/substrate/implementation/fail_weight_without_dispatch.rs:18:12
   |
18 |     #[obce(weight())]
   |            ^^^^^^^^
